--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    
-    <script src="./dist/code.js"></script>
-</head>
-<body>
-    <H1>Hello World!</H1>
-</body>
+
+    <script src="./dist/main.js"></script>
+    <link rel="stylesheet" href="./src/style.css" />
+  </head>
+  <body></body>
 </html>
