Created view and gamestate classes

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <script src="./dist/main.js"></script>
     <link rel="stylesheet" href="./src/style.css" />
+    <script defer src="./dist/gamestate.js"></script>
+    <script defer src="./dist/gameview.js"></script>
+    <script defer src="./dist/startview.js"></script>
+    <script defer src="./dist/gameoverview.js"></script>
+    <script defer src="./dist/main.js"></script>
   </head>
   <body></body>
 </html>
