--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="./src/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Gaegu:wght@300&display=swap" rel="stylesheet">
     <script defer src="./dist/gamestate.js"></script>
     <script defer src="./dist/gameview.js"></script>
     <script defer src="./dist/startview.js"></script>
