Co-authored-by: Victor Wikström <victor.wikstrom@medieinstitutet.se>

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script defer src="./dist/gameview.js"></script>
     <script defer src="./dist/startview.js"></script>
     <script defer src="./dist/gameoverview.js"></script>
+    <script defer src="./dist/opponent.js"></script>
     <script defer src="./dist/main.js"></script>
   </head>
   <body></body>
