--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="./src/style.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Gaegu:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gaegu:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <script defer src="./dist/gamestate.js"></script>
     <script defer src="./dist/gameview.js"></script>
     <script defer src="./dist/startview.js"></script>
     <script defer src="./dist/gameoverview.js"></script>
     <script defer src="./dist/opponent.js"></script>
+    <script defer src="./dist/leader.js"></script>
     <script defer src="./dist/main.js"></script>
   </head>
   <body></body>
