--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
 
-    <link rel="stylesheet" href="./src/style.css"/>
-    <link rel="stylesheet" href="./src/mview.css">
-    <link rel="stylesheet" href="./src/tview.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Gaegu:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./src/style.css" />
+    <link rel="stylesheet" href="./src/mview.css" />
+    <link rel="stylesheet" href="./src/tview.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gaegu:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <script defer src="./dist/gamestate.js"></script>
     <script defer src="./dist/gameview.js"></script>
     <script defer src="./dist/startview.js"></script>
