fixed numbers and game over screen

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" href="./src/mview.css" />
     <link rel="stylesheet" href="./src/tview.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Gaegu:wght@300&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Gaegu:wght@300&display=swap"
+      rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+
     <script defer src="./dist/gamestate.js"></script>
     <script defer src="./dist/gameview.js"></script>
     <script defer src="./dist/startview.js"></script>
